# modules-ci-example

./: CMakeLists.txt
.github/workflows/: test.yaml
src/: mod.cpp  mod.cppm
test/: modtest.cpp
